--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -399,7 +399,7 @@ a{
     background-color: rgb(62, 233, 124);
   }
   
-  .footer{
+  .footer2{
     row-gap: 1rem;
     margin-top: 44rem;
     padding: 1rem;
@@ -415,7 +415,7 @@ a{
     justify-content: center;
   }
   
-  .terms{
+  .terms2{
     gap: 1rem;
     margin-bottom: 0.5rem;
     color: rgb(59 130 246);
