--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -57,11 +57,13 @@ a{
   }
   .top-sticky-blue-test2 {
     padding: 0.75rem 16rem;
-    background-color: rgb(30 58 138);
+    background-color: #e9f2ff;
     color: rgb(255, 255, 255);
     font-size: 1.2rem;
     font-weight: 800;
     text-align: left;
+    text-transform: uppercase;
+    box-shadow: 0px 1px 2px 0px #4c4c4c5c;
 
 }
 @media (max-width: 768px) {
