--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -207,6 +207,11 @@ a{
     // margin-top: -0.1rem;
       font-size: 1.5rem; /* Reduce the font size for smaller screens */
       line-height: 1.2; /* Adjust the line height as needed */
+    },
+ .main-des-title-6-7-raghib {
+    // margin-top: -0.1rem;
+      font-size: 1.7rem; /* Reduce the font size for smaller screens */
+      line-height: 1.2; /* Adjust the line height as needed */
     }
   }
   .main-des-title-6-test{
