--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -212,6 +212,7 @@ a{
     // margin-top: -0.1rem;
       font-size: 1.7rem; /* Reduce the font size for smaller screens */
       line-height: 1.2; /* Adjust the line height as needed */
+margin-bottom:20px;
     }
   }
   .main-des-title-6-test{
