--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -153,10 +153,16 @@ a{
     margin-left: 5%;
     margin-top: 0.5rem;
   }
-  .topic-img-middle-z{
+  // .topic-img-middle-z{
+  //   width: 80%;
+  //   margin-left: 11%;
+  //   margin-top: -6px;
+  // }
+ .topic-img-middle-z{
     width: 80%;
     margin-left: 11%;
     margin-top: -6px;
+    border-radius:4px
   }
   .topic-img-middle-test{
     width: 70%;
