--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -72,6 +72,26 @@ a{
     padding: 1.25rem 1rem; /* Adjust padding for smaller screens */
   }
 }
+.top-sticky-blue-xy {
+  text-align: left; /* Center-align the text */
+  padding: 0.75rem 1rem; /* Adjust padding for smaller screens */
+}
+
+.top-sticky-blue-test2 {
+  text-align: left; /* Center-align the text */
+  padding: 1.25rem 1rem; /* Adjust padding for smaller screens */
+}
+
+.top-sticky-blue-test2 {
+padding: 0.75rem 16rem;
+background-color: rgb(30 58 138);
+color: rgb(255, 255, 255);
+font-size: 1.2rem;
+font-weight: 800;
+text-align: left;
+}
+
+
   
   .top-sticky-blue-test {
     margin-left: -10px;
