--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -47,7 +47,19 @@ a{
     font-weight: 800;
     text-align: left;
   }
+  .top-sticky-blue-test2 {
 
+   
+    
+
+    padding: 0.75rem 16rem;
+    background-color: rgb(30 58 138);
+    color: rgb(255, 255, 255);
+    font-size: 1.2rem;
+    font-weight: 800;
+    text-align: left;
+
+}
 
   @media (max-width: 768px) {
     .top-sticky-blue-xy {
@@ -56,14 +68,16 @@ a{
     }
   }
   .top-sticky-blue-test2 {
+
+   
+    
+
     padding: 0.75rem 16rem;
-    background-color: #e9f2ff;
+    background-color: rgb(30 58 138);
     color: rgb(255, 255, 255);
     font-size: 1.2rem;
     font-weight: 800;
     text-align: left;
-    text-transform: uppercase;
-    box-shadow: 0px 1px 2px 0px #4c4c4c5c;
 
 }
 @media (max-width: 768px) {
@@ -775,4 +789,12 @@ margin-bottom:20px;
 .call-btn {
   -webkit-animation: glow 1.5s infinite alternate;
   animation: glow 1.5s infinite alternate
+}
+
+
+@media (max-width: 768px) {
+  .top-sticky-blue-test2 {
+    text-align: left; /* Center-align the text */
+    padding: 1.25rem 1rem; /* Adjust padding for smaller screens */
+  }
 }
